Fixed viewport issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     padding: 0;
     background-image: url('../img/Battlefield-Sarel-Theron.jpg'); 
 	background-size: cover;
-	background-position: 50%;
+	background-position: 50% 50%;
 	background-repeat: no-repeat;
 }
 
@@ -57,13 +57,6 @@ TITLE & SCORE PANEL
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-.game-board-container {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-    justify-content: center;
 }
 
 .score-panel {
@@ -146,6 +139,13 @@ ___________________________________________________
 GAME BOARD & CARD TYPES
 
 */
+
+.game-board-container {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+    justify-content: center;
+}
 
 .game-board {
 	margin: 0;
